# android_installer

./: .gitignore  AGENTS.md  README.md  adb_utils.py  android_installer.spec  main.py  pyproject.toml  release.py  开发计划.md
script/: release.py
src/: adb_utils.py  main.py
