[project]
name = "android_installer"
version = "0.1.0"
description = "Android APK Installer"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Junerver", email = "junerver@gmail.com" }]
dependencies = ["customtkinter>=5.2.2", "tkinterdnd2>=0.3.0"]

[dependency-groups]
dev = ["pyinstaller>=6.16.0"]
